css/main.css
/* ... */
.product__qty {
  display: flex;
  align-items: center;
  gap: 10px;
}

.product__qty button {
  font-size: 25px;
}

.product__qty-num {
  width: 47px;
  height: 47px;
  padding: 10px;
  text-align: center;
  border: 1px solid #D4D4D4;
  border-radius: 50%;
}

.radio-wrapper input {
  display: none;
}

.radio-label {
  position: relative;
  padding-left: 30px;
  cursor: pointer;
}

.radio-label:before {
  content: "";
  position: absolute;
  left: 0;
  width: 17px;
  height: 17px;
  border: 1px solid #999999;
  display: block;
  border-radius: 50%;
}

.radio-label:after {
  content: "";
  position: absolute;
  left: 4px;
  top: 4px;
  width: 11px;
  height: 11px;
  background-color: var(--main-red);
  display: block;
  border-radius: 50%;
  display: none;
}

.radio-wrapper input:checked+.radio-label:after {
  display: block;
}

.contact-label {
  width: 47%;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.contact-label.last {
  width: 100%;
}

.contact-label span {
  color: #999999;
  font-size: 14px;
}

.contact-input {
  padding: 13px 18px;
  border-radius: 5px;
  background-color: #F5F5F5;
  font-size: 16px;
}

.contact-textarea {
  border-radius: 5px;
  background-color: #F5F5F5;
  width: 100%;
  height: 97px;
  padding: 13px 18px;
  font-family: inherit;
}

.modal-content-element {
  display: flex;
  padding: 10px 0;
  gap: 15px;
  align-items: center;
}

.header .modal-content {
  max-height: 90vh;
  overflow: hidden;
}

.header .modal-content>.row {
  max-height: 90vh;
  overflow: scroll;
  background: #fff;
}

@media (max-width: 1200px) {
  .header__main-contact {
    display: none;
  }
}

@media (max-width: 1000px) {
  .header__link {
    display: none;
  }

  .header__link:first-of-type,
  .header__link:nth-of-type(2) {
    display: block;
  }

  .header__main-logo {
    width: 300px;
  }

  .header__main {
    gap: 30px
  }

  .footer__linkcards {
    flex-wrap: wrap;
    row-gap: 40px;
  }

  .footer__linkcard:last-of-type {
    width: 100%;
    align-items: center;
  }
}

@media (max-width: 900px) {
  .routes {
    padding-top: 20px;
  }

  .header__main {
    flex-wrap: wrap;
    align-items: center;
  }

  .header__main-search {
    order: 1;
    width: 100%;
  }

  .header__main-linkbtn {
    font-size: 25px;
  }

  .header__main-linkbtn.on-mobile {
    display: block;
  }

  .header__main-linkbtn span,
  .header__links {
    display: none;
  }

  .header__main-details {
    gap: 15px
  }

  .header__mobile {
    display: flex;
  }

  .section__title {
    font-size: 30px;
  }
}

@media (max-width: 600px) {
  .routes__item:not(.active) {
    display: none;
  }

  .routes__item.active:before {
    content: "\f12f";
    padding-right: 10px;
    font-size: 18px;
    color: var(--main-blue);
  }

  .products__item-img {
    height: 160px;
    width: 40%;
  }

  .products__item-details {
    width: 60%;
  }
}

@media (max-width: 550px) {
  .header__main-logo {
    width: 55%;
  }

  .header__main-details {
    max-width: 40%;
  }

  .header__main-linkbtn i {
    font-size: 23px;
  }
}

@media (max-width: 500px) {
  .header__top {
    display: none;
  }

  .footer__linkcard:last-of-type {
    width: 100%;
    align-items: flex-start;
  }

  .footer__linkcard-logo {
    width: 80%;
  }

  .contact-label {
    width: 100%;
  }
}

@media (max-width: 450px) {
  .products__item-buybtn {
    padding: 8px 20px;
  }

  .products__item-actionbtn {
    font-size: 20px;
  }
}

@media (max-width: 420px) {
  .header__main-logo {
    width: 48%;
  }

  .header__main-linkbtn i {
    font-size: 18px;
  }
}

